syntax = "proto3";

package blog;

option go_package = "github.com/IndominusByte/go-grpc/blog/proto";

import "google/protobuf/empty.proto";

message Blog {
  string id = 1;
  string author = 2;
  string title = 3;
  string content = 4;
}

message BlogId {
  string id = 1;
}

service BlogService {
  rpc CreateBlog (Blog) returns (BlogId);
  rpc ReadBlog (BlogId) returns (Blog);
  rpc UpdateBlog (Blog) returns (google.protobuf.Empty);
  rpc ListBlogs (google.protobuf.Empty) returns (stream Blog);
  rpc DeleteBlogs (BlogId) returns (google.protobuf.Empty);
}
